app prop update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuración de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/wenl_db
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de Hibernate
